--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,5 +3,6 @@ Changelog
 
 0.1-dev (unreleased)
 -------------------
-
-- Initial release
+ * Cleanup: of pyflakes warnings [ichimdav #4141]
+ * Cleanup: of pylint violations [ichimdav #4140]
+ * Initial release
