--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+0.2-dev - (unreleased)
+----------------------
+
 0.1 - (2011-04-19)
 ------------------
  * Cleanup: of pyflakes warnings [ichimdav #4141]
