--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,9 @@
 Changelog
 =========
 
-0.2-dev - (unreleased)
+4.0-dev - (unreleased)
 ----------------------
+ * Feature: Plone 4.0.4 compatible release [ghicaale #4235]
 
 0.1 - (2011-04-19)
 ------------------
