Prepare eea.alchemy 4.0.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,27 +1,23 @@
 Changelog
 =========
 
-
-4.0 - (2011-11-07)
+4.0 - (unreleased)
 ------------------
 
+4.0-dev - (2011-11-07)
+------------------
 * Feature: Added possibility to auto-discover tags not only in Title and Description.
   [voineali #4633]
-
 * Feature: Added upgrade steps
   [voineali #4392]
-
 * Feature: Plone 4.x compatible release
   [ghicaale #4235]
 
-
 0.1 - (2011-04-19)
 ------------------
-
 * Cleanup: of pyflakes warnings
   [ichimdav #4141]
-
 * Cleanup: of pylint violations
   [ichimdav #4140]
-
 * Initial release
+
