--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,14 @@ Changelog
 
 4.3-dev - (unreleased)
 ----------------------
+ * Feature: added preview feature for the bulk auto-discover
+   [ghicaale #5008]
+ * Feature: added transaction commits for faster reindex on bulk auto-discover
+   [ghicaale #5008]
+ * Bug fix: fixed reindexing objects after bulk auto-discover geotags
+   [ghicaale #5008]
+ * Bug fix: fixed not to show empty suggestions on bulk auto-discover geotags
+   [ghicaale #5008]
 
 4.2 - (2012-02-06)
 ------------------
@@ -10,18 +18,18 @@ Changelog
 
 4.0 - (2011-11-07)
 ------------------
-* Feature: Added possibility to auto-discover tags not only in Title and Description.
-  [voineali #4633]
-* Feature: Added upgrade steps
-  [voineali #4392]
-* Feature: Plone 4.x compatible release
-  [ghicaale #4235]
+ * Feature: Added possibility to auto-discover tags not only in Title and Description.
+   [voineali #4633]
+ * Feature: Added upgrade steps
+   [voineali #4392]
+ * Feature: Plone 4.x compatible release
+   [ghicaale #4235]
 
 0.1 - (2011-04-19)
 ------------------
-* Cleanup: of pyflakes warnings
-  [ichimdav #4141]
-* Cleanup: of pylint violations
-  [ichimdav #4140]
-* Initial release
+ * Cleanup: of pyflakes warnings
+   [ichimdav #4141]
+ * Cleanup: of pylint violations
+   [ichimdav #4140]
+ * Initial release
 
