--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.4-dev - (unreleased)
+----------------------
+
 4.3 - (2012-04-26)
 ------------------
  * Feature: added batch selection on bulk auto-dicover
