--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 ----------------------
 * Bug fix: fixed markup of HISTORY.txt file
   [ciobabog refs #5231]
-* Bug Fix: Fixed i18n missing tags in eea.alchemy 
+* Bug Fix: Fixed i18n missing tags and i18n:domain in *.pt 
   [prospchr refs #5162]
 
 4.3 - (2012-04-26)
