Refs #9486 - Add control panel for Alchemy Settings

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,15 @@
 Changelog
 =========
 
-4.5-dev - (unreleased)
+5.0-dev - (unreleased)
 ----------------------
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for EEA Alchemy
+* WIP Feature: Auto highlight keywords within a page content based on selected
+  tags and link them to a custom search page
+  [voineali refs #9486]
+* Feature: Group all Alchemy settings within Site Setup > Alchemy Settings
+  [voineali refs #9486]
 
 4.4 - (2012-07-13)
 ------------------
