--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -8,8 +8,7 @@ Changelog
   portal_javascripts / portal_css in order to optimize requests per page.
 * Upgrade step: Within "Plone > Site setup > Add-ons" click on
   upgrade button available for EEA Alchemy
-
-* WIP Feature: Auto highlight keywords within a page content based on selected
+* Feature: Auto highlight keywords within a page content based on selected
   tags and link them to a custom search page
   [voineali refs #9486]
 * Feature: Group all Alchemy settings within Site Setup > Alchemy Settings
