--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.1-dev - (unreleased)
+----------------------
+
 5.0 - (2013-05-20)
 ------------------
 * Upgrade step: (optional) Manually **Enable auto tagging** within Site Setup >
