--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.1-dev - (unreleased)
 ----------------------
+* Change: updated link to site setup
+  [ghicale]
 * Upgrade step: (optional) Manually **Enable auto relations** within Site Setup >
   Alchemy Settings
   [voineali refs #9486]
