--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.2-dev - (unreleased)
+----------------------
+
 5.1 - (2013-06-17)
 ------------------
 * Upgrade step: (optional) Manually **Enable auto relations** within Site Setup >
