Fixes eea #14864; reenabled tests that failed after upgrade to Plone 4.3 which have been fixed by setting the _at_rename_after_creation flag

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.5-dev - (unreleased)
 ----------------------
+* Bug fix: fixed failing tests after Plone 4.3 upgrade
+  [ichim-david refs eea #14864]
 
 5.4 - (2013-08-19)
 ------------------
