--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 5.6-dev - (unreleased)
 ----------------------
+* Bug fix: Preserve manually added relations when
+  auto-relations feature is enabled
+  [voineali refs #16718]
 
 5.5 - (2013-09-06)
 ------------------
