--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.7-dev - (unreleased)
+----------------------
+
 5.6 - (2013-10-04)
 ------------------
 * Bug fix: Fixed "duplicates referenced before assignment" error
