* Change: updated docsting for disable auto-links field   [ghicaale refs #16666]

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.7-dev - (unreleased)
 ----------------------
+* Change: updated docsting for disable auto-links field
+  [ghicaale refs #16666]
 
 5.6 - (2013-10-04)
 ------------------
