--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,8 @@ Changelog
 ----------------------
 * Change: updated docsting for disable auto-links field
   [ghicaale refs #16666]
+* Feature: adding Sphinx-generated documentation in Page Template format
+  [batradav refs #9502]
 
 5.6 - (2013-10-04)
 ------------------
