Updated version for eea.alchemy to 5.9-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.9-dev - (unreleased)
+----------------------
+
 5.8 - (2014-08-12)
 ------------------
 * Bug fix: Include i18n translations
