Updated version for eea.alchemy to 6.1.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.1.dev0 - (unreleased)
+-----------------------
+
 6.0 - (2015-03-17)
 ------------------
 * Change: Switched to curl in the jenkins build install script
