--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,12 +3,15 @@ Changelog
 
 6.1.dev0 - (unreleased)
 -----------------------
+* Bug fix: Auto-include zcml within plone context in order to make this package
+  work without having to add it within buildout zcml directive.
+  [avoinea]
 
 6.0 - (2015-03-17)
 ------------------
 * Change: Switched to curl in the jenkins build install script
   [olimpiurob refs #22402]
-* Change: Changed fetch url for jenkins build install script to the install 
+* Change: Changed fetch url for jenkins build install script to the install
   script from the main EEA CPB repository
   [olimpiurob refs #22402]
 
