--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.2.dev0 - (unreleased)
+-----------------------
+
 6.1 - (2015-08-18)
 ------------------
 * Bug fix: Auto-include zcml within plone context in order to make this package
