--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.5.dev0 - (unreleased)
+-----------------------
+
 6.4 - (2016-05-04)
 ------------------
 * Bug fix: fixed pylint warnings
